# Qt-Recipe-Manager

./: CMakeLists.txt  README.md  chef.txt  main.cpp  recipes.txt
domain/: Chef.cpp  Chef.h  Recipe.cpp  Recipe.h
gui/: ChefWindow.cpp  ChefWindow.h  RecipesGraphicalView.cpp  RecipesGraphicalView.h
observer/: Observer.h  Subject.h
repository/: ChefRepository.cpp  ChefRepository.h  RecipeRepository.cpp  RecipeRepository.h
service/: ChefService.cpp  ChefService.h  RecipeService.cpp  RecipeService.h
